add version 2 includes: create,search functionality

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -11,5 +11,8 @@
         @apply p-2 text-xs md:text-sm bg-gradient-to-b from-yellow-200 to-yellow-400 border-yellow-300 rounded-sm focus:ring-yellow-500 active:from-yellow-500 focus:outline-none
     }
 
+    .addeffect{
+        @apply    hover:border-black hover:shadow-2xl
+    }
    
 }
